# FoodomicsPy

./: .gitignore  README.md  environment.yml  pyproject.toml
.spyproject/config/: workspace.ini
docs/: developer_guide.md
src/foodomicspy/: __init__.py  normalization.py
src/foodomicspy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_normalization.py
