[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foodomicspy"
version = "0.1.0"
description = "Python tools for foodomics, spectroscopy, NMR, FTIR, and chemometrics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Umrbek Mavlanov" }
]
dependencies = [
    "numpy>=1.24,<2",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "plotly>=5.0",
    "openpyxl>=3.1",
    "h5py>=3.8",
    "nmrglue>=0.10"
]

[tool.setuptools.packages.find]
where = ["src"]
